along correctly

-------------------------------------------------------------------------------

Mon Oct  4 17:58:33 PDT 1999
(Raster)

my god.. copyright notices..........

-------------------------------------------------------------------------------

Mon Oct  4 18:10:34 PDT 1999
(Raster)

better directory checkign on startup.........

-------------------------------------------------------------------------------

Mon Oct  4 18:19:13 PDT 1999
(Raster)

get rid of "//" C++ style comments..... eeeeeeevil

-------------------------------------------------------------------------------

Tue Oct  5 09:15:46 PDT 1999
(Raster)

get rid of ~ backup file and rogue .xvpics dir :)

-------------------------------------------------------------------------------

Tue Oct  5 11:09:53 PDT 1999
(Raster)

let the sun AWT developers have a better day finding out the frame size.. 
now lest wait for sun to producea patch/new version of awt that uses 
this property :)

-------------------------------------------------------------------------------

Tue Oct  5 11:54:49 PDT 1999
(Raster)

handle window gravities correctly... :)

-------------------------------------------------------------------------------

Tue Oct  5 12:06:49 PDT 1999
(Raster)

__WINDOWS_KEY was the wrang meta modifier - chnage the definitions define...
add a windowskey+left mosue and ctrl+left mouse optison to briugn up menus

-------------------------------------------------------------------------------

Tue Oct  5 14:23:51 PDT 1999
(Raster)

add dialogs to warn about zoom mode etc......

-------------------------------------------------------------------------------

Tue Oct  5 16:08:28 PDT 1999
(Raster)

allow tooltips for DESKBINDINGS to be displayed

-------------------------------------------------------------------------------

Tue Oct  5 16:21:56 PDT 1999
(Raster)

and let deskbindings tooltips work & add the tooltips into the defautl 
keybindings.cfg